--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "css-compile": "tailwindcss build -i resources/css/tailwind.css -c resources/js/tailwind.config.js -o resources/css/tailwind.css",
-    "css-minified": "tailwindcss build -i resources/css/tailwind.css -c resources/js/tailwind.config.js -o resources/css/tailwind/app.min.css --minify",
+    "css-compile": "tailwindcss build -i resources/css/tailwind.css -c ./tailwind.config.js -o resources/css/min/app.min.css",
+    "css-minified": "tailwindcss build -i resources/css/tailwind.css -c ./tailwind.config.js -o resources/css/min/app.min.css --minify",
     "css": "npm-run-all --sequential css-*",
     "watch": "npm-run-all build --parallel watch-templates watch-css browsersync",
-    "watch-css": "tailwindcss build -i resources/css/tailwind.css -c resources/js/tailwind.config.js -o resources/css/app.min.css --minify --watch"
+    "watch-css": "tailwindcss build -i resources/css/tailwind.css -c ./tailwind.config.js -o resources/css/min/app.min.css --minify --watch"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "axios": "^1.1.2",
     "laravel-vite-plugin": "^0.7.2",
     "lodash": "^4.17.19",
-    "postcss": "^8.1.14",
-    "vite": "^4.0.0",
-    "tailwindcss": "^3.0.7"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
+    "vite": "^4.0.0"
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "vue": "^3.2.36",
-    "vue-loader": "^17.0.1",
-    "autoprefixer": "^10.4.0",
     "browser-sync": "^2.27.7",
     "cpx": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
     "pug-cli": "^1.0.0-alpha6",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "vue": "^3.2.36",
+    "vue-loader": "^17.0.1",
+    "vue-router": "^4.1.6"
   }
 }
