--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "mailgun/mailgun-php": "^3.5",
+        "nyholm/psr7": "^1.5",
+        "symfony/http-client": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -58,7 +61,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "stable",
