--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7",
         "mailgun/mailgun-php": "^3.5",
         "nyholm/psr7": "^1.5",
+        "stripe/stripe-php": "^12.3",
         "symfony/http-client": "^6.2"
     },
     "require-dev": {
